--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,10 @@ subtitle: ''
 description: ''
 keywords:
 author: John Doe
-language: en
+language: 
+- zh-cn
+- zh-tw
+- en
 timezone: ''
 
 # URL
@@ -97,7 +100,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: landscape_test
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
